--- a/buildspec.yaml
+++ b/buildspec.yaml
@@ -25,8 +25,7 @@ phases:
 
       - IMAGE_URIS=()
       - REPO_NAMES=()
-      - for FUNCTION_NAME in "${FUNCTION_NAMES[@]}";
-        do
+      - for FUNCTION_NAME in "${FUNCTION_NAMES[@]}"; do
         IMAGE_URI=$(aws lambda get-function --function-name $FUNCTION_NAME | jq -r '.Code.ImageUri')&&
         IMAGE_URIS+=("${IMAGE_URI}")&&
         REPO_NAME=$(echo ${IMAGE_URI} | cut -d "/" -f 2)/$(echo ${IMAGE_URI} | cut -d "/" -f 3)&&
@@ -37,8 +36,7 @@ phases:
   build:
     commands:
       - echo "[+] building ...."
-      - for i in "${!REPO_NAMES[@]}";
-        do
+      - for i in "${!REPO_NAMES[@]}"; do
         docker build -t $ECR_URI/${REPO_NAMES[$i]}:$LATEST_TAG ${FUNCTION_SRC_DIRS[$i]}&&
         docker tag $ECR_URI/$REPO_NAME:$LATEST_TAG $ECR_URI/$REPO_NAME:$TAG_NAME;
         done
@@ -47,8 +45,8 @@ phases:
     commands:
       - echo "SAM packaging completed on `date`"
       - for i in "${!REPO_NAMES[@]}"; do
-        docker push $ECR_URI/${REPO_NAMES[$i]}:$LATEST_TAG
-        aws lambda update-function-code --function-name ${FUNCTION_NAMES[$i]} --image-uri $ECR_URI/${REPO_NAMES[$i]}:$LATEST_TAG
+        docker push $ECR_URI/${REPO_NAMES[$i]}:$LATEST_TAG &&
+        aws lambda update-function-code --function-name ${FUNCTION_NAMES[$i]} --image-uri $ECR_URI/${REPO_NAMES[$i]}:$LATEST_TAG;
         done
       # - docker push $IMAGE_LATEST
       # - docker push $IMAGE_TAG
