--- a/buildspec.yaml
+++ b/buildspec.yaml
@@ -29,6 +29,7 @@ phases:
         IMAGE_URI=$(aws lambda get-function --function-name $FUNCTION_NAME | jq -r '.Code.ImageUri')&&
         IMAGE_URIS+=("${IMAGE_URI}")&&
         REPO_NAME=$(echo ${IMAGE_URI} | cut -d "/" -f 2)/$(echo ${IMAGE_URI} | cut -d "/" -f 3)&&
+        echo "[+] Repo Name ${REPO_NAME}" &&
         REPO_NAMES+=("${REPO_NAME}");
         done
       - COMMIT_HASH=$(echo $CODEBUILD_RESOLVED_SOURCE_VERSION | cut -c 1-7)
