--- a/buildspec.yaml
+++ b/buildspec.yaml
@@ -16,7 +16,7 @@ phases:
       - ENV=dev
       - LATEST_TAG="latest"
       - ECR_URI="${ACCOUNT_ID}.dkr.ecr.${AWS_REGION}.amazonaws.com"
-      - FUNCTION_NAMES=( ${SYSTEM_NAME}_${ENV}_CommandFunction ${SYSTEM_NAME}_${ENV}_ProcessSQSFunction ${SYSTEM_NAME}_${ENV}_ProcessStreamFunction ${SYSTEM_NAME}_${ENV}_AuthFunction ${SYSTEM_NAME}_${ENV}_QueryFunction ${SYSTEM_NAME}_${ENV}_WaitSQSConsumer )
+      - FUNCTION_NAMES=(${SYSTEM_NAME}_${ENV}_CommandFunction ${SYSTEM_NAME}_${ENV}_ProcessSQSFunction ${SYSTEM_NAME}_${ENV}_ProcessStreamFunction ${SYSTEM_NAME}_${ENV}_AuthFunction ${SYSTEM_NAME}_${ENV}_QueryFunction ${SYSTEM_NAME}_${ENV}_WaitSQSConsumer)
       - FUNCTION_SRC_DIRS=(command process_sqs process_stream authorizer query process_wait)
 
       - aws --version
@@ -25,6 +25,8 @@ phases:
 
       - IMAGE_URIS=()
       - REPO_NAMES=()
+      - x=$(aws lambda get-function --function-name ${SYSTEM_NAME}_${ENV}_CommandFunction | jq -r '.Code.ImageUri')
+      - echo $x
       - for FUNCTION_NAME in "${FUNCTION_NAMES[@]}"; do
         IMAGE_URI=$(aws lambda get-function --function-name $FUNCTION_NAME | jq -r '.Code.ImageUri')&&
         IMAGE_URIS+=("${IMAGE_URI}")&&
