--- a/buildspec.yaml
+++ b/buildspec.yaml
@@ -28,7 +28,7 @@ phases:
       - x=$(aws lambda get-function --function-name ${SYSTEM_NAME}_${ENV}_CommandFunction | jq -r '.Code.ImageUri')
       - echo $x
       - for FUNCTION_NAME in "${FUNCTION_NAMES[@]}"; do
-        echo "[+] Building ${FUNCTION_NAME} image"
+        echo "[+] Building ${FUNCTION_NAME} image";
         done
       - for FUNCTION_NAME in "${FUNCTION_NAMES[@]}"; do
         IMAGE_URI=$(aws lambda get-function --function-name $FUNCTION_NAME | jq -r '.Code.ImageUri');
