--- a/buildspec.yaml
+++ b/buildspec.yaml
@@ -28,7 +28,8 @@ phases:
       - for TENANT in $(echo $FUNCTION_SRC_DIRS | sed "s/ / /g"); do
         echo $TENANT;
         done
-      - for FUNCTION_NAME in $(echo $FUNCTION_NAMES | sed "s/ / /g"; do
+      - for FUNCTION_NAME in $(echo $FUNCTION_NAMES | sed "s/ / /g"); do
+        echo $FUNCTION_NAME;
         IMAGE_URI=$(aws lambda get-function --function-name $FUNCTION_NAME | jq -r '.Code.ImageUri');
         IMAGE_URIS+=("${IMAGE_URI}");
         REPO_NAME=$(echo ${IMAGE_URI} | cut -d "/" -f 2)/$(echo ${IMAGE_URI} | cut -d "/" -f 3);
