--- a/buildspec.yaml
+++ b/buildspec.yaml
@@ -33,8 +33,8 @@ phases:
         echo "[+] Repo Name ${REPO_NAME}";
         REPO_NAMES+=("${REPO_NAME}");
         done
-      - echo "[+] Image URIs: $IMAGE_URIS"
-      - echo "[+] Repo Names: $REPO_NAMES"
+      - echo "[+] Image URIs $IMAGE_URIS"
+      - echo "[+] Repo Names $REPO_NAMES"
       - COMMIT_HASH=$(echo $CODEBUILD_RESOLVED_SOURCE_VERSION | cut -c 1-7)
       - IMAGE_TAG=${COMMIT_HASH:=latest}
   build:
