--- a/buildspec.yaml
+++ b/buildspec.yaml
@@ -23,15 +23,15 @@ phases:
       # login to ECR
       - aws ecr get-login-password --region ${AWS_REGION} | docker login --username AWS --password-stdin ${ECR_URI}
 
-      - IMAGE_URIS=()
-      - REPO_NAMES=()
+      - IMAGE_URIS=""
+      - REPO_NAMES=""
       - for FUNCTION_NAME in $(echo $FUNCTION_NAMES | sed "s/ / /g"); do
         echo $FUNCTION_NAME;
         IMAGE_URI=$(aws lambda get-function --function-name $FUNCTION_NAME | jq -r '.Code.ImageUri');
-        IMAGE_URIS+=("${IMAGE_URI}");
+        IMAGE_URIS+="${IMAGE_URI}";
         REPO_NAME=$(echo ${IMAGE_URI} | cut -d "/" -f 2)/$(echo ${IMAGE_URI} | cut -d "/" -f 3);
         echo "[+] Repo Name ${REPO_NAME}";
-        REPO_NAMES+=("${REPO_NAME}");
+        REPO_NAMES+="${REPO_NAME}";
         done
       - echo "[+] Image URIs $IMAGE_URIS"
       - echo "[+] Repo Names $REPO_NAMES"
@@ -40,20 +40,24 @@ phases:
   build:
     commands:
       - echo "[+] building ...."
-      - for i in "${!REPO_NAMES[@]}"; do
-        docker build -t $ECR_URI/${REPO_NAMES[$i]}:$LATEST_TAG ${FUNCTION_SRC_DIRS[$i]};
+      - i=0
+      - for REPO_NAME in $(echo $REPO_NAMES | sed "s/ / /g"); do
+        docker build -t $ECR_URI/$REPO_NAME:$LATEST_TAG $(echo $FUNCTION_SRC_DIRS | cut -d " " -f $i)));
         docker tag $ECR_URI/$REPO_NAME:$LATEST_TAG $ECR_URI/$REPO_NAME:$TAG_NAME;
+        i=$((i+1))
         done
 
   post_build:
     commands:
       - echo "SAM packaging completed on `date`"
-      - for i in "${!REPO_NAMES[@]}"; do
-        docker push $ECR_URI/${REPO_NAMES[$i]}:$IMAGE_TAG;
-        docker push $ECR_URI/${REPO_NAMES[$i]}:$LATEST_TAG;
-        echo "Pushed $ECR_URI/${REPO_NAMES[$i]}:$IMAGE_TAG";
-        echo "Pushed $ECR_URI/${REPO_NAMES[$i]}:$LATEST_TAG";
-        aws lambda update-function-code --function-name ${FUNCTION_NAMES[$i]} --image-uri $ECR_URI/${REPO_NAMES[$i]}:$LATEST_TAG;
+      - i=0
+      - for REPO_NAME in $(echo $REPO_NAMES | sed "s/ / /g"); do
+        docker push $ECR_URI/$REPO_NAME:$IMAGE_TAG;
+        docker push $ECR_URI/$REPO_NAME:$LATEST_TAG;
+        echo "Pushed $ECR_URI/$REPO_NAME:$IMAGE_TAG";
+        echo "Pushed $ECR_URI/$REPO_NAME:$LATEST_TAG";
+        aws lambda update-function-code --function-name $(echo $FUNCTION_NAMES | cut -d " " -f $i))) --image-uri $ECR_URI/$REPO_NAME:$LATEST_TAG;
+        i=$((i+1))
         done
 # artifacts:
 #   files:
