--- a/buildspec.yaml
+++ b/buildspec.yaml
@@ -29,7 +29,9 @@ phases:
       - for FUNCTION_NAME in $(echo $FUNCTION_NAMES | sed "s/ / /g"); do
         IMAGE_URI=$(aws lambda get-function --function-name $FUNCTION_NAME | jq -r '.Code.ImageUri');
         IMAGE_URIS+="${IMAGE_URI} ";
+
         REPO_NAME=$(echo ${IMAGE_URI} | cut -d "/" -f 2)/$(echo ${IMAGE_URI} | cut -d "/" -f 3);
+        REPO_NAME=$(echo ${REPO_NAME} | cut -d ":" -f 1);
         REPO_NAMES+="${REPO_NAME} ";
         done
       - echo "[+] Image URIs $IMAGE_URIS"
