update env for process stream

--- a/infra/sam_mbc/template.yaml
+++ b/infra/sam_mbc/template.yaml
@@ -312,7 +312,7 @@ Resources:
             TopicName: !GetAtt SNSTopic.TopicName
       Environment:
         Variables:
-          TopicName: !GetAtt SNSTopic.TopicName
+          TOPIC_NAME: !GetAtt SNSTopic.TopicName
       Tags:
         Name: !Ref SystemName
         Env: !Ref Env
