--- a/infra/sam_mbc/template_db.yaml
+++ b/infra/sam_mbc/template_db.yaml
@@ -6,15 +6,19 @@ Description: >
   Sam for DynamoDb
 
 Parameters:
-  Region:
-    Type: String
-    Default: ap-northeast-1
-  Name:
+  SystemName:
     Type: String
     Default: mbcsso
   Env:
     Type: String
     Default: dev
+
+  SystemId:
+    Type: String
+    Default: ''
+  TenantId:
+    Type: String
+    Default: ''
 
   ReadCapacityUnits:
     Type: Number
@@ -26,11 +30,19 @@ Parameters:
     Type: Number
     Default: 5
 
+Rules:
+  ValidateId:
+    Assertions:
+      - Assert: !Not [!Equals [!Ref SystemId, '']]
+        AssertDescription: 'SystemId is required'
+      - Assert: !Not [!Equals [!Ref TenantId, '']]
+        AssertDescription: 'TenantId is required'
+
 Resources:
   WriteUserTable:
     Type: AWS::DynamoDB::Table
     Properties:
-      TableName: !Sub ${Name}_${Env}_1_1_user_commands #{PREFIX}_{SystemId}_{TenantId}_write_User
+      TableName: !Sub ${SystemName}_${Env}_${SystemId}_${TenantId}_user_commands #{PREFIX}_{SystemId}_{TenantId}_user_commands
       AttributeDefinitions:
         - AttributeName: id
           AttributeType: S
@@ -84,190 +96,7 @@ Resources:
   ReadUserTable:
     Type: AWS::DynamoDB::Table
     Properties:
-      TableName: !Sub ${Name}_${Env}_1_1_users #{PREFIX}_{SystemId}_{TenantId}_write_User
-      AttributeDefinitions:
-        - AttributeName: id
-          AttributeType: S
-        - AttributeName: sk
-          AttributeType: S
-        - AttributeName: member_id
-          AttributeType: S
-        - AttributeName: email
-          AttributeType: S
-        - AttributeName: first_name
-          AttributeType: S
-        - AttributeName: last_name
-          AttributeType: S
-        - AttributeName: config_updated_at
-          AttributeType: N
-
-      KeySchema:
-        - AttributeName: id
-          KeyType: HASH
-        - AttributeName: sk
-          KeyType: RANGE
-      ProvisionedThroughput:
-        ReadCapacityUnits: !Ref ReadCapacityUnits
-        WriteCapacityUnits: !Ref WriteCapacityUnits
-      StreamSpecification:
-        StreamViewType: NEW_IMAGE
-      # GSI
-      GlobalSecondaryIndexes:
-        - IndexName: UserGroupGSI
-          KeySchema:
-            - AttributeName: member_id
-              KeyType: HASH
-            - AttributeName: id
-              KeyType: RANGE
-          Projection:
-            NonKeyAttributes:
-              - sk
-              - update_at
-            ProjectionType: INCLUDE
-          ProvisionedThroughput:
-            ReadCapacityUnits: !Ref ReadCapacityUnits
-            WriteCapacityUnits: !Ref WriteCapacityUnits
-
-        - IndexName: UserEmailGSI
-          KeySchema:
-            - AttributeName: email
-              KeyType: HASH
-            - AttributeName: sk
-              KeyType: RANGE
-          Projection:
-            NonKeyAttributes:
-              - id
-              - first_name
-              - last_name
-              - is_active
-              - version
-              - config_updated_at
-              - attributes
-            ProjectionType: INCLUDE
-          ProvisionedThroughput:
-            ReadCapacityUnits: !Ref ReadCapacityUnits
-            WriteCapacityUnits: !Ref WriteCapacityUnits
-
-        - IndexName: UserUpdatedAtGSI
-          KeySchema:
-            - AttributeName: id
-              KeyType: HASH
-            - AttributeName: config_updated_at
-              KeyType: RANGE
-          Projection:
-            NonKeyAttributes:
-              - sk
-              - email
-              - first_name
-              - last_name
-              - is_active
-              - version
-              - attributes
-            ProjectionType: INCLUDE
-          ProvisionedThroughput:
-            ReadCapacityUnits: !Ref ReadCapacityUnits
-            WriteCapacityUnits: !Ref WriteCapacityUnits
-
-        - IndexName: UserLastNameGSI
-          KeySchema:
-            - AttributeName: last_name
-              KeyType: HASH
-            - AttributeName: config_updated_at
-              KeyType: RANGE
-          Projection:
-            NonKeyAttributes:
-              - id
-              - sk
-              - email
-              - first_name
-              - is_active
-              - version
-              - attributes
-
-            ProjectionType: INCLUDE
-          ProvisionedThroughput:
-            ReadCapacityUnits: !Ref ReadCapacityUnits
-            WriteCapacityUnits: !Ref WriteCapacityUnits
-
-        - IndexName: UserFirstNameGSI
-          KeySchema:
-            - AttributeName: first_name
-              KeyType: HASH
-            - AttributeName: config_updated_at
-              KeyType: RANGE
-          Projection:
-            NonKeyAttributes:
-              - id
-              - sk
-              - email
-              - last_name
-              - is_active
-              - version
-              - attributes
-
-            ProjectionType: INCLUDE
-          ProvisionedThroughput:
-            ReadCapacityUnits: !Ref ReadCapacityUnits
-            WriteCapacityUnits: !Ref WriteCapacityUnits
-  WriteUser2Table:
-    Type: AWS::DynamoDB::Table
-    Properties:
-      TableName: !Sub ${Name}_${Env}_2_2_user_commands #{PREFIX}_{SystemId}_{TenantId}_write_User
-      AttributeDefinitions:
-        - AttributeName: id
-          AttributeType: S
-        - AttributeName: sk
-          AttributeType: S
-        - AttributeName: email
-          AttributeType: S
-      KeySchema:
-        - AttributeName: id
-          KeyType: HASH
-        - AttributeName: sk
-          KeyType: RANGE
-      ProvisionedThroughput:
-        ReadCapacityUnits: !Ref ReadCapacityUnits
-        WriteCapacityUnits: !Ref WriteCapacityUnits
-      StreamSpecification:
-        StreamViewType: NEW_IMAGE
-        # GSI
-      GlobalSecondaryIndexes:
-        - IndexName: UserEmailGSI
-          KeySchema:
-            - AttributeName: email
-              KeyType: HASH
-            - AttributeName: sk
-              KeyType: RANGE
-          Projection:
-            NonKeyAttributes:
-              - id
-              - first_name
-              - last_name
-              - is_active
-              - version
-              - updated_at
-              - attributes
-            ProjectionType: INCLUDE
-          ProvisionedThroughput:
-            ReadCapacityUnits: !Ref ReadCapacityUnits
-            WriteCapacityUnits: !Ref WriteCapacityUnits
-        - IndexName: UserGroupGSI
-          KeySchema:
-            - AttributeName: sk
-              KeyType: HASH
-            - AttributeName: id
-              KeyType: RANGE
-          Projection:
-            ProjectionType: KEYS_ONLY
-          ProvisionedThroughput:
-            ReadCapacityUnits: !Ref ReadCapacityUnits
-            WriteCapacityUnits: !Ref WriteCapacityUnits
-
-  # for query
-  ReadUser2Table:
-    Type: AWS::DynamoDB::Table
-    Properties:
-      TableName: !Sub ${Name}_${Env}_2_2_users #{PREFIX}_{SystemId}_{TenantId}_write_User
+      TableName: !Sub ${SystemName}_${Env}_${SystemId}_${TenantId}_users #{PREFIX}_{SystemId}_{TenantId}_users
       AttributeDefinitions:
         - AttributeName: id
           AttributeType: S
