--- a/src/process_stream/Dockerfile
+++ b/src/process_stream/Dockerfile
@@ -1,6 +1,7 @@
 FROM public.ecr.aws/lambda/python:3.9
 
 COPY app.py requirements.txt ./
+COPY shared_code ./shared_code
 
 RUN python3.9 -m pip install -r requirements.txt -t .
 
