--- a/test/sam_example/stream-app/hello_world/Dockerfile
+++ b/test/sam_example/stream-app/hello_world/Dockerfile
@@ -1,6 +1,6 @@
 FROM public.ecr.aws/lambda/python:3.9
 
-COPY app.py requirements.txt ./
+COPY app.py requirements.txt shared_code ./
 
 RUN python3.9 -m pip install -r requirements.txt -t .
 
